src/main/resources/Krakatau-master/tests/assembler/bad/badmhcode.j
.class public badmhcode
.super [0]
.const [1] = MethodHandle notACode Method java/lang/Runtime getRuntime ()Ljava/lang/Runtime;
.end class
